--- a/index.html
+++ b/index.html
@@ -1,298 +1,93 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE HTML>
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
+<meta charset="utf-8">
 <meta name="viewport" content="user-scalable=yes" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>💕Welcome to BVN Repository💕</title>
-	<link rel="stylesheet" type="text/css" href="./assets/css/animate.css"/>
-	<link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
 
+<title>💕Welcome to BVN Repository💕
+</title>
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 
- </div>
-</div>
-   <div class="animated fadeInDown" id="topnavbar">
-<br>
-<br>
+<body>
 
-<div id="supporticons">
+<h1>BVN REPO🥷🏻
+</h1>
 
-        <div class="hovershadow" id="emailicon" onclick="location.href='mailto:bienvannhat97@gmail.com';">       
-        </div>
+<div id="MainMenu" class="MainMenu">
+	
+	<div class="buttons">
 
-        <div class="hovershadow" id="githubicon" onclick="location.href='https://github.com/support-jailbreak'">       
-        </div>
+	<button type="button" class="btn-square cydia" onclick="location.href='cydia://url/https://cydia.saurik.com/api/share#?source=https://support-jailbreak.github.io/'">Cydia</button>
+  
+  <button type="button" class="btn-square sileo" onclick="location.href='sileo://source/https://support-jailbreak.github.io/'">Sileo</button>
+  
+  <button type="button" class="btn-square zebra" onclick="location.href='zbra://sources/add/https://support-jailbreak.github.io/'">Zebra</button>
 
+   <button type="button" class="btn-square Installer" onclick="location.href='Installer://sources/add/https://support-jailbreak.github.io/'">Installer</button>
 
-        <div class="hovershadow" id="redditicon" onclick="location.href='https://reddit.com/user/bvnsupport'">       
-        </div>
-
-        <div class="hovershadow" id="twittericon" onclick="location.href='https://mobile.twitter.com/RepoBvn'">       
-        </div>
-
-</div>
-   </div>
-
-<div class="headhov">
-    <div class="animated count pulse" id="header" onclick="location.href='https://support-jailbreak.github.io'">
-
-    </div>
+   	</div>
+	
 </div>
 
-    <div class="filter animated fadeInUp" id="repotitle">
-               BVN SUPPORT JAILBREAK
-    </div>
+<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Link cài trực tiếp TrollStore</h1>
 
-    <div class="filter animated fadeInUp" id="repodesc">
-        Kho lưu trữ github dành riêng để lưu trữ các chỉnh sửa bẻ khoá.
-       
-    </div>
-<br>
-<center>
-<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
-</center>
-<br>
-    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-NHẤP VÀO BÊN DƯỚI ĐỂ THÊM NGUỒN (CLICK BELOW TO ADD SOURCE)
-    </div>
+<div id="TrollStore" class="MainMenu">
+	
+	<div class="buttons">
 
-<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+	<button type="button" class="btn-square cydia" onclick="location.href='https://is.gd/34306installer14'">TrollStore iOS14</button>
+  
+  <button type="button" class="btn-square sileo" onclick="location.href='https://is.gd/34306troll'">TrollStore iOS15</button>
+  
+  <button type="button" class="btn-square zebra" onclick="location.href='https://drive.google.com/file/d/1ls020Y_g8vdjDotlBIi0K5awQueY6NnO/view?usp=drivesdk'">
+Filza Crack 14-15</button>
 
-<center>
-<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
- <div class="cydiablur zoom">
-  <div class="cydiablur-inside">
-    <img onclick="location.href='https://cydia.saurik.com/api/share#?source=https://support-jailbreak.github.io';" src="./assets/cydiaicon.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadecydia" id="caption">Cydia</div>
+   <button type="button" class="btn-square Installer" onclick="location.href='https://zeus.me/get/filzaescaped16'">FilzaEscaped iOS 16</button>
+
+   	</div>
+	
+	</div>
+	
 </div>
 
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="sileoblur zoom">
-  <div class="sileoblur-inside">
-    <img onclick="location.href='sileo://source/https://support-jailbreak.github.io';" src="./assets/sileoicon.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Sileo</div>
+<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Thông tin liên hệ</h1>
+
+<div id="Thông tin" class="MainMenu">
+	
+	<div class="buttons">
+		
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://www.facebook.com/bvnmobileservices999?mibextid=LQQJ4d'">Facebook</button>
+		<!--
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://www.facebook.com/bvnmobileservices999?mibextid=LQQJ4d'">Liên hệ tôi</button>
+		-->
+	  
+       <button type="button" class="btn-square cydia" onclick="location.href='https://www.facebook.com/repocydiaBVN?mibextid=LQQJ4d'">FANPAGE</button> 
+		
+	</div>
+	
 </div>
 
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlzebra">
- <div class="zebrablur zoom">
-  <div class="zebrablur-inside">
-    <img onclick="location.href='zbra://sources/add/https://support-jailbreak.github.io';" src="./assets/zebraicon.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadezebra" id="caption">Zebra</div>
-</div>
 
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 25px" class="row zoom animated swirlinstaller">
- <div class="installerblur zoom">
-  <div class="installerblur-inside">
-    <img onclick="location.href='installer://add/repo=https://support-jailbreak.github.io';" src="./assets/installericon.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadeinstaller" id="caption">Installer</div>
-
-  </div>
-<br>
-<center>
-<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
-</center>
-<br>
-</center>
-
-    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-KHO IPA MIỄN PHÍ
-    </div>
-
-<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
-
-<center>
-<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
- <div class="trollstoreblur zoom">
-  <div class="trollstoreblur-inside">
-    <img onclick="location.href='https://support-jailbreak.github.io/KhoIPA';" src="./assets/ipa.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadecydia" id="caption">Hãy nhấp vào đây</div>
-</div>
-
-      <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-CHECK IMEI FREE BY BVN
-    </div>
-
-<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
-
-<center>
-<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
- <div class="trollstoreblur zoom">
-  <div class="trollstoreblur-inside">
-    <img onclick="location.href='https://support-jailbreak.github.io/CHECKIMEIBVN';" src="./assets/IMEI.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadecydia" id="caption">Hãy nhấp vào đây</div>
-</div>
-</div>
-
-</div>
-  </div>
-<br>
-<center>
-<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
-</center>
-<br>
-</center>
-
-    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-Link Cài Trực Tiếp TrollStore iOS 14-15 
-    </div>
-
-<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
-
-<center>
-<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
- <div class="trollstoreblur zoom">
-  <div class="trollstoreblur-inside">
-    <img onclick="location.href='https://is.gd/34306installer14';" src="./assets/trollstore.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadecydia" id="caption">TrollStore iOS 14</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="trollstore15blur zoom">
-  <div class="trollstore15blur-inside">
-    <img onclick="location.href='https://is.gd/34306troll';" src="./assets/trollstore15.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">TrollStore iOS15</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="Filza15blur zoom">
-  <div class="Filzablur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1ls020Y_g8vdjDotlBIi0K5awQueY6NnO/view?usp=drivesdk';" src="./assets/Filza.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">FilzaCrack 14-15</div>
-</div>
-   </div>
-</div>
-
-<br>
-<br>
-<br>
-
-<center>
-
-</div>
-  </div>
-<br>
-<center>
-<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
-</center>
-<br>
-</center>
-
-
-<center>
-
-<div class="animated fadeInUp" id="cardbox">
-
-<br>
-<br>
-
-<center>
-<img class="filter" src="./assets/arrow.png" width="100px">
-
-<h1 class="filter">ỦNG HỘ TÔI</h1>
-</center>
-
-<center>
-<div style="margin-top: 80px; margin-bottom: 60px; margin-right: 35px" class="row">
-<hr width="220px" class="filter hr2">
-</div>
-<div style="margin-top: 80px; margin-bottom: 60px" class="filter row">
-<img src="./assets/cardbox.png" width="100px">
-</div>
-<div style="margin-top: 80px; margin-bottom: 60px; margin-left: 35px" class="row">
-<hr width="220px" class="filter hr2">
-</div>
-</center>
-<div class="packages" id="packages">
 
 </div>
 
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="sileoblur zoom">
-  <div class="sileoblur-inside">
-    <img onclick="location.href='https://support-jailbreak.github.io/infodeb/DONATE/?p=info';" src="./assets/bank.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Hãy nhấp vào đây </div>
-</div>
-<center>
-<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
-</center>
-<br>
+<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Ủng hộ tôi</h1>
 
-    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-LIÊN HỆ CHO TÔI QUA
-    </div>
-
-<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
-
-<center>
-<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
- <div class="cydiablur zoom">
-  <div class="cydiablur-inside">
-    <img onclick="location.href='https://www.facebook.com/profile.php?id=100080146819169';" src="./assets/facebook.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadecydia" id="caption">Facebook</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="sileoblur zoom">
-  <div class="sileoblur-inside">
-    <img onclick="location.href='https://www.facebook.com/groups/3752444134882121/';" src="./assets/Group.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Group facebook</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlzebra">
- <div class="zebrablur zoom">
-  <div class="zebrablur-inside">
-    <img onclick="location.href='https://m.facebook.com/repocydiaBVN/';" src="./assets/fanpage.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadezebra" id="caption">Fanpage Facebook</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 25px" class="row zoom animated swirlinstaller">
- <div class="installerblur zoom">
-  <div class="installerblur-inside">
-    <img onclick="location.href='https://www.paypal.com/paypalme/repocydiaBVN/';" src="./assets/paypal.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadeinstaller" id="caption">Paypal</div>
-</div>
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 25px" class="row zoom animated swirlinstaller">
- <div class="installerblur zoom">
-  <div class="installerblur-inside">
-    <img onclick="location.href='https://youtu.be/xvBwBJkjc8s';" src="./assets/youtube.png" style="width: 125px; height: 125px" class="filter">
-  </div>
-</div>
-</div>
-<div class="filter animated fadeinstaller" id="caption">Youtube</div>
-</center>
-</div>
-<br>
-<br>
+<div id="Ủng hộ tôi" class="MainMenu">
+	
+	<div class="buttons">
+		
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://www.paypal.com/paypalme/repocydiaBVN/'">Paypal</button>
+		<!--
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://www.paypal.com/paypalme/repocydiaBVN/'">Paypal</button>
+		-->
+		
+	
 
 <div class="animated fadeInUp" id="cardbox">
 <div class="packages" id="packages">
@@ -305,8 +100,6 @@ LIÊN HỆ CHO TÔI QUA
 <br>
 <br>
 
-<div style="margin-bottom: 68px"></div>
-
 </div>
 </div>
 
@@ -314,7 +107,7 @@ LIÊN HỆ CHO TÔI QUA
 
 <div class="animated fadeInUp" id="bottomnavnar">
 <br>
-<div>Copyright © 2023 - Nhật Biện - VietNam Production</div>
+<div>Copyright © 2023 - NHẬT BIỆN - VIETNAM PRODUCTION</div>
 </div>
 
 </body>
