--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="ja">
+<html lang="vi_VN">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="user-scalable=yes" content="width=device-width, initial-scale=1">
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-
-<h1>BVN REPO🥷🏻
+ <h1>BVN REPO🥷🏻
 </h1>
 
 <div id="MainMenu" class="MainMenu">
@@ -32,6 +31,8 @@
 
    	</div>
 
+  </div>
+ 
 </div>
 
 <h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">CHECK IMEI FREE </h1>
