--- a/infodeb/SearchDots/index.html
+++ b/infodeb/SearchDots/index.html
@@ -17,6 +17,15 @@ Tìm kiếm trong Spotlight
 <br>
 <li>
 Tìm kiếm trong thư viện ứng dụng!
+<br>
+<li>
+
+Ẩn nền
+
+<br>
+<li>
+
+Hỗ trợ một trang(Yêu càu respring để áp dụng)
 
 </span></li></lable><br>
 <ul class="screenshot-viewer">
@@ -48,11 +57,11 @@ Phiên bản mới nhất hiện tại.
 
 <tr><td>Phiên bản</td><td>
 
-1.0.0
+1.1.6
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-28/5/2023
+4/7/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -62,7 +71,7 @@ Phiên bản mới nhất hiện tại.
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-15.0 - 15.7
+14.0 - 15.7
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
