--- a/infodeb/DynamicPeninsula1/index.html
+++ b/infodeb/DynamicPeninsula1/index.html
@@ -62,9 +62,32 @@ công tắc âm lượng/tắt tiếng
 <img src="Screenshots/1.png?size=medium"/></a></li>
 
 
-<li><a target="_blank" href="Screenshots/2.mp4?size=full">
-<img src="Screenshots/2.mp4?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/2.png?size=full">
+<img src="Screenshots/2.png?size=medium"/></a></li>
 
+<li><a target="_blank" href="Screenshots/3.png?size=full">
+<img src="Screenshots/3.png?size=medium"/></a></li>
+
+<li><a target="_blank" href="Screenshots/4.png?size=full">
+<img src="Screenshots/4.png?size=medium"/></a></li>
+
+<li><a target="_blank" href="Screenshots/5.png?size=full">
+<img src="Screenshots/5.png?size=medium"/></a></li>
+
+<li><a target="_blank" href="Screenshots/6.png?size=full">
+<img src="Screenshots/6.png?size=medium"/></a></li>
+
+<li><a target="_blank" href="Screenshots/7.png?size=full">
+<img src="Screenshots/7.png?size=medium"/></a></li>
+
+<li><a target="_blank" href="Screenshots/8.png?size=full">
+<img src="Screenshots/8.png?size=medium"/></a></li>
+
+<li><a target="_blank" href="Screenshots/9.png?size=full">
+<img src="Screenshots/9.png?size=medium"/></a></li>
+
+<li><a target="_blank" href="Screenshots/10.png?size=full">
+<img src="Screenshots/10.png?size=medium"/></a></li>
 
 
 
