--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    </div>
 
  </div>
-<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Link cài trực tiếp TrollStore</h1>
+<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Link cài trực tiếp TrollStore (iOS 14.0-14.8.1)- (15.0-15.4.1)</h1>
 
 <div id="TrollStore" class="MainMenu">
 	
@@ -56,7 +56,7 @@
   
   <button type="button" class="btn-square sileo" onclick="location.href='https://is.gd/34306troll'">TrollStore iOS15</button>
   
-  <button type="button" class="btn-square zebra" onclick="location.href='https://drive.google.com/file/d/1ls020Y_g8vdjDotlBIi0K5awQueY6NnO/view?usp=drivesdk'">
+  <button type="button" class="btn-square zebra" onclick="location.href='https://drive.google.com/file/d/19Z-jONO4s611q--yarCpLTsUL-PNjrVJ/view?usp=drivesdk'">
 Filza Crack 14-15</button>
 
    <button type="button" class="btn-square Installer" onclick="location.href='https://zeus.me/get/filzaescaped16'">FilzaEscaped iOS 16</button>
