--- a/infodeb/LteTo5G/index.html
+++ b/infodeb/LteTo5G/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-Thêm ngày tháng Âm Lịch vào phía trên góc trái màn hình của bạn .Hỗ trợ các dòng máy không có Tai Thỏ
-<br>
-<li>
-
-
-Các bạn có thể xem hình ảnh phía dưới 
-
+<Red>Thay đổi tên 4G,LTE thành 5G
 
 </span></li></lable><br>
 <ul class="screenshot-viewer">
@@ -15,8 +9,10 @@ Các bạn có thể xem hình ảnh phía dưới
 
 
 
-<li><a target="_blank" href="Screenshots/1.jpg?size=full">
-<img src="Screenshots/1.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/1.png?size=full">
+<img src="Screenshots/1.png?size=medium"/></a></li>
+
+
 
 
 
@@ -25,7 +21,7 @@ Các bạn có thể xem hình ảnh phía dưới
 
 <li>
 
-Phiên Bản Mới Nhất Hiện Tại.
+Phiên bản mới nhất 
 
 </li>
 
@@ -33,24 +29,24 @@ Phiên Bản Mới Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-1.1
+0.2
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-22/3/2023
+12/7/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
 
-20 KB
+8 KB
 
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-12 - 16.4.1
+15.0 - 16.4.1
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
