--- a/infodeb/BatteryPercent/index.html
+++ b/infodeb/BatteryPercent/index.html
@@ -23,6 +23,9 @@
 <li>
 
 v1.0.1 fix lỗi trên iOS12
+<li>
+Hỗ trợ Rootless Jailbreak
+
 
 </li>
 
@@ -35,7 +38,7 @@ v1.0.1 fix lỗi trên iOS12
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-27/01/2023
+13/7/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -45,7 +48,7 @@ v1.0.1 fix lỗi trên iOS12
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-12.0 - 15
+12.0 - 16.4.1
 
 
 
