--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    </div>
 
  </div>
-<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Link cài trực tiếp TrollStore (iOS 14.0-14.8.1)- (15.0-15.4.1)</h1>
+<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Link cài trực tiếp TrollStore (iOS 14.0-14.8.1)- (15.0-15.5B4)</h1>
 
 <div id="TrollStore" class="MainMenu">
 	
