--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
 </head>
 
 <body>
- <h1>Repo BVN chuyển Qua
+ <h1>Repo BVN chuyển Qua :https://bvnsupport.github.io
 </h1>
 
-<div id="MainMenu" class="MainMenu">
-	
-	<div class="buttons">
 
-	<button type="button" class="btn-square cydia" onclick="location.href='cydia://url/https://cydia.saurik.com/api/share#?source=https://bvnsupport.github.io/'">https://bvnsupport.github.io</button>
   
