--- a/index.html
+++ b/index.html
@@ -14,123 +14,24 @@
 </head>
 
 <body>
- <h1>BVN REPOSITORY
+ <h1>Click add New 👇 Repo
 </h1>
 
 <div id="MainMenu" class="MainMenu">
 	
+</div>
+
+<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">New Repo </h1>
+
+<div id="newrepo" class="MainMenu">
+	
 	<div class="buttons">
 
-	<button type="button" class="btn-square cydia" onclick="location.href='cydia://url/https://cydia.saurik.com/api/share#?source=https://support-jailbreak.github.io/'">Cydia</button>
-  
-  <button type="button" class="btn-square sileo" onclick="location.href='sileo://source/https://support-jailbreak.github.io/'">Sileo</button>
-  
-  <button type="button" class="btn-square zebra" onclick="location.href='zbra://sources/add/https://support-jailbreak.github.io/'">Zebra</button>
-
-   <button type="button" class="btn-square Installer" onclick="location.href='Installer://sources/add/https://support-jailbreak.github.io/'">Installer</button>
-
-   	</div>
-
-  </div>
+	<button type="button" class="btn-square sileo" onclick="location.href='https://bvnsupport.github.io'">New Repo</button>
+       </div>
      </div>
 
-<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Kho Lưu trữ IPA </h1>
-
-<div id="khoipabvn" class="MainMenu">
-	
-	<div class="buttons">
-
-	<button type="button" class="btn-square cydia" onclick="location.href='https://bvnsupport.github.io/KhoIPA/'">Kho IPA By BVN</button>
-	
-   </div>
- 
-</div>
-
-<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">CHECK IMEI FREE </h1>
-
-<div id="Checkimei" class="MainMenu">
-	
-	<div class="buttons">
-
-	<button type="button" class="btn-square sileo" onclick="location.href='http://evondt.com/imei-check/ipad-warranty-basic-info-checker'">Click Check IMEI</button>
-	
-   </div>
-
- </div>
-<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Link cài trực tiếp TrollStore (iOS 14.0-14.8.1)- (15.0-15.5B4)</h1>
-
-<div id="TrollStore" class="MainMenu">
-	
-	<div class="buttons">
-
-	<button type="button" class="btn-square cydia" onclick="location.href='https://api.jailbreaks.app/troll64e'">TrollStore iOS14</button>
-  
-  <button type="button" class="btn-square sileo" onclick="location.href='https://api.jailbreaks.app/troll'">TrollStore iOS15</button>
-  
-  <button type="button" class="btn-square zebra" onclick="location.href='https://drive.google.com/file/d/19Z-jONO4s611q--yarCpLTsUL-PNjrVJ/view?usp=drivesdk'">
-Filza Crack 14-15</button>
-
-   <button type="button" class="btn-square Installer" onclick="location.href='https://zeus.me/get/filzaescaped16'">FilzaEscaped iOS16</button>
-
-    <button type="button" class="btn-square zebra" onclick="location.href='https://is.gd/huynguyenmisaka210'">
-Misaka "34306"</button>
-
-    <button type="button" class="btn-square sileo" onclick="location.href='https://www.mediafire.com/folder/hyo5mp23gs3c7/Tool+%E1%BA%A9n+iCloud+iOS+16.0-16.6+(Beta1)%E2%9D%8E16.5.1'">Tool Ẩn iCloud</button>
-   	</div>
-	
-	</div>
-	
-</div>
-
-<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Thông tin liên hệ</h1>
-
-<div id="Thông tin" class="MainMenu">
-	
-	<div class="buttons">
-		
-		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://www.facebook.com/bvnmobileservices999?mibextid=LQQJ4d'">Facebook</button>
-		<!--
-		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://www.facebook.com/bvnmobileservices999?mibextid=LQQJ4d'">Liên hệ tôi</button>
-		-->
-	  
-       <button type="button" class="btn-square cydia" onclick="location.href='https://www.facebook.com/repocydiaBVN?mibextid=LQQJ4d'">FANPAGE</button> 
-		
-	</div>
-	
-</div>
-
-
-
-</div>
-
-<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Ủng hộ tôi</h1>
-
-<div id="Ủng hộ tôi" class="MainMenu">
-	
-	<div class="buttons">
-		
-		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://www.paypal.com/paypalme/repocydiaBVN/'">Paypal</button>
-		<!--
-		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://www.paypal.com/paypalme/repocydiaBVN/'">Paypal</button>
-		-->
-		
-	    <button type="button" class="btn-square cydia" onclick="location.href='https://support-jailbreak.github.io/infodeb/DONATE/'">NH Viet Nam</button>
-
-<div class="animated fadeInUp" id="cardbox">
-<div class="packages" id="packages">
-<br>
-<br>
-	<hr class="filter hr1">
-<br>
-<center><img class="imageleft" src="./assets/bvn.png" style="border-radius: 4%;" width="98%"></center>
-
-<br>
-<br>
-
-</div>
-</div>
-
-</center>
+  </center>
 
 <div class="animated fadeInUp" id="bottomnavnar">
 <br>
